# clean-marc

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/clean_marc/: cli.py  namespaces.py  utils.py
src/clean_marc/anything/: spanything.py
src/clean_marc/anything/queries/: agents_sa.sparql  content_analysis_sa.sparql  places_sa.sparql
src/clean_marc/conversions/: fetch_agents.rq  update_graph.py
src/clean_marc/conversions/post/: add_cmo_agents.ru  create_org_links.ru  remove_org_class_from_mss.ru
src/clean_marc/conversions/pre/: update_iris.sparql  update_marc.sparql
src/clean_marc/imported_model/: bibframe.ttl  languages.madsrdf.ttl
src/clean_marc/included_model/: clean_marc.ttl  example.ttl  output.ttl
src/clean_marc/marc/: marc.py  marc_data.py  sevenhundredten.py
src/clean_marc/model/: relators.skosrdf.ttl
src/clean_marc/oclc/: oclc.py
src/clean_marc/queries/: agents.rq  agents_cleaned.sparql  agents_cleaned_new.rq  bibliographic_resource.rq  queries.py  resources.rq  subjects.sparql  topics.rq
src/clean_marc/queries/gcm.db/: 000033.sst  IDENTITY  LOG  MANIFEST-000005  OPTIONS-000029  OPTIONS-000031
src/clean_marc/queries/item_queries/: agents_cleaned_new.rq  class_counts.rq  places.rq  topics.rq  work_topics.rq
src/clean_marc/queries/record_queries/: bibliographic_resource.rq  resource_content_analysis.sparql  resource_contributors.sparql  resource_creators.sparql  resources.rq  resources_collections.rq  resources_new_contrib.rq
src/clean_marc/reasoner/: reasoner.py
src/clean_marc/xml2rdf/: __init__.py  xml2rdf.py
