[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clean-marc"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "svirgilgood" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "lxml==6.0.2",
  "rdflib==7.1.3",
  "pandas==2.2.3",
  "dotenv==0.9.9",
  "bookops-worldcat==1.1.0",
  "requests==2.32.3",
  "openpyxl==3.1.5",
  "owlrl==7.1.3",
  "reasonable==0.2.6",
  "pysparql-anything==1.0.0.0"
]

[project.urls]
Documentation = "https://github.com/svirgilgood/clean-marc#readme"
Issues = "https://github.com/svirgilgood/clean-marc/issues"
Source = "https://github.com/svirgilgood/clean-marc"

[project.scripts]
clean-marc = "clean_marc.cli:cli"

[tool.hatch.version]
path = "src/clean_marc/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/clean_marc tests}"

[tool.coverage.run]
source_pkgs = ["clean_marc", "tests"]
branch = true
parallel = true
omit = [
  "src/clean_marc/__about__.py",
]

[tool.coverage.paths]
clean_marc = ["src/clean_marc", "*/clean-marc/src/clean_marc"]
tests = ["tests", "*/clean-marc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
